Bug 171663 - wrong (zero) line numbers
Summary: wrong (zero) line numbers
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: FreeBSD Ports FreeBSD
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-09-25 21:28 UTC by Christian Sturm
Modified: 2009-06-24 12:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Comment 1 Olivier Trichet 2009-05-15 19:31:02 UTC
Note to myself, the data from the XOVER lacks the line count. Maybe display a blank field in this case.
Comment 2 Olivier Trichet 2009-06-24 12:50:38 UTC
SVN commit 986168 by otrichet:

Do not display a 0 line count when the Lines: header is missing

BUG: 171663

 M  +3 -2      knhdrviewitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=986168