Do not display a 0 line count when the Lines: header is missing

BUG: 171663

svn path=/trunk/KDE/kdepim/knode/; revision=986168